# taktflow-embedded-production

./: .gitignore  CLAUDE.md  GOVERNANCE-SAFETY-ASPICE.md  Makefile.pipeline  README.md
.claude/rules/: development-discipline.md  global.md  lessons-learned.md
.github/workflows/: ci.yml  test.yml  traceability.yml
arxml/: TaktflowSystem.arxml
arxml_v2/: TaktflowSystem.arxml  TaktflowWiring.arxml  ports_model.json  swc_model.json
deploy/docker/: compose-posix-ecus.yml
docker/: .env.example  Dockerfile.vecu  docker-compose.dev.yml  docker-compose.gil.yml  docker-compose.hil-pi.yml  docker-compose.hil.yml  docker-compose.laptop.yml  docker-compose.pi.yml  docker-compose.sil.yml
docs/: PROJECT_STATE.md  integration_audit.md  phase-4-line-b-multi-frame-bench-pass.md
docs/analysis/: sc-safety-evidence-gap-log.md
docs/arxmlgen/: quality-verification.md  user-guide.md
docs/aspice/: docs-aspice-overview.md
docs/guides/: reading-list.html
docs/lessons-learned/: embedded-bringup-tms570-can-tx.md  embedded-bringup.md  embedded-hil-rigol-dho804-setup.md  embedded-hil-sc-e2e-run-state.md  foxbms-integration.md  tms570-bringup.md
docs/plans/: OSEK_OS_SPEC.md  Taktflow_EmbeddedWorld_Briefs.html  Taktflow_OnePager.html  Taktflow_Pipeline_Architecture.html  Taktflow_Platform_Architecture.html  Taktflow_Software_Factory_v1.docx  dbc-quality-assessment.md  gap-analysis-hil-bench-vs-professional.md  handoff-hil-session-2026-03-26.md  plan-10-role-bms-gap-analysis.md  plan-ai-assisted-codegen.md  plan-arxml-architecture-migration.md  plan-bsw-com-rte-unification.md  plan-can-bus-monitor.md  plan-clean-data-model.md  plan-codegen-gap-closure.md  plan-com-rx-deadline-monitor.md  plan-firmware-rewrite.md  plan-foxbms-posix-incremental.md  plan-godot-bridge-pi.md  plan-hil-plant-sim.md  plan-hil-preflight-divergence-closure.md  plan-hil-test-suite.md  plan-incremental-firmware-verification.md  plan-m33-os-port.md  plan-netcup-migration.md  plan-openbsw-architecture-comparison.md  plan-os-threadx-bootstrap.md  plan-osek-sc3-backbone.md  plan-plantsim-faultinject-rewrite.md  plan-production-repo-migration.md  plan-signal-initialization-audit.md  plan-sil-hil-cloud-endgame.md  plan-sil-test-update-hil-bench.md  plan-vsm-realignment.md  progress-can-dataflow-rewrite-incremental-verification-2026-03-21.md
docs/reference/: build-guide.md  threadx-local-reference-map.md  tms570-port-traceability.md
docs/safety/: INDEX.md  os-sc3-safety-manual.md
experiments/openbsw-rt-sched/: .gitignore  CMakeLists.txt  DESIGN.md  PLAN_DAVINCI_PARITY.md  PR_PROPOSAL.md  README.md
experiments/openbsw-rt-sched/demo/: CMakeLists.txt
experiments/openbsw-rt-sched/demo/include/demo/: ControlSystem.h  SafetySystem.h  TelemetrySystem.h  manifest.h
experiments/openbsw-rt-sched/demo/src/: ControlSystem.cpp  SafetySystem.cpp  TelemetrySystem.cpp  manifest.cpp
experiments/openbsw-rt-sched/gui/: sample-divergence.json  sample.json  schedule-audit.html
experiments/openbsw-rt-sched/libs/rtScheduling/: CMakeLists.txt
experiments/openbsw-rt-sched/libs/rtScheduling/include/rtScheduling/: AsyncBridge.h  Feasibility.h  Json.h  MonitoredRunnable.h  Registry.h  Types.h
experiments/openbsw-rt-sched/libs/rtScheduling/src/: Json.cpp  Registry.cpp
experiments/openbsw-rt-sched/libs/rtScheduling/test/: CMakeLists.txt
experiments/openbsw-rt-sched/libs/rtScheduling/test/src/: FeasibilityTest.cpp  JsonTest.cpp  MonitoredRunnableTest.cpp  RegistryTest.cpp  RtaTest.cpp
gateway/: taktflow.dbc  taktflow_diag.dbc  taktflow_sil.dbc  taktflow_vehicle.dbc
gateway/can_to_doip_proxy/: .gitignore  Cargo.toml  Dockerfile  README.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
gateway/can_to_doip_proxy/deploy/: can-to-doip-proxy.service  install-on-pi.sh  opensovd-proxy-vcan.toml  opensovd-proxy.toml
gateway/can_to_doip_proxy/docs/: phase-2-live-cvc-smoke.py  phase-2-smoke-test.py
gateway/can_to_doip_proxy/proxy-can/: Cargo.toml
gateway/can_to_doip_proxy/proxy-can/src/: isotp.rs  lib.rs  socket.rs
gateway/can_to_doip_proxy/proxy-core/: Cargo.toml
gateway/can_to_doip_proxy/proxy-core/src/: discovery.rs  lib.rs  routing.rs  translator.rs
gateway/can_to_doip_proxy/proxy-doip/: Cargo.toml
gateway/can_to_doip_proxy/proxy-doip/src/: codec.rs  frame.rs  lib.rs  message_types.rs  server.rs
gateway/can_to_doip_proxy/proxy-doip/tests/: doip_codec_byte_compat.rs
gateway/can_to_doip_proxy/proxy-main/: Cargo.toml
gateway/can_to_doip_proxy/proxy-main/src/: main.rs
gateway/can_to_doip_proxy/proxy-main/tests/: integration_vcan.rs  integration_vcan_multiframe.rs
model/: ecu_sidecar.yaml
scripts/: CAN Monitor.bat  Serial Monitor.bat  qnx_to_laptop_relay.py  serial-monitor.py  setup_ssh.sh  tcp_to_vcan_docker.py
tools/: arxml_wiring.py  dbc_split.py  extract_ports.py  generate_all.py  inject_code_ports.py  inject_minimal.py  map_code_to_dbc.py  rename_signals_full_prefix.py  sanity_check_all.py
tools/odx-gen/: .gitignore  README.md  pyproject.toml
tools/odx-gen/docs/: DTC_CATALOG_SCHEMA.md  odx-converter-status.md
tools/odx-gen/odx_gen/: __init__.py  __main__.py  build_from_dbc.py  build_mdd.py  build_pdx.py  discover.py  extract.py  iso_15031_6_dtcs.py
tools/odx-gen/odx_gen/config/: dbc_to_odx_mapping.yaml
tools/odx-gen/odx_gen/data/: iso_15031_6_dtcs.yaml
tools/odx-gen/odx_gen/model/: __init__.py  ecu_diagnostic.py
tools/odx-gen/odx_gen/parsers/: __init__.py  dbc.py  dcm_cfg.py  dcm_service_table.py  dem_cfg.py  ecu_cfg_header.py
tools/odx-gen/odx_gen/schemas/: __init__.py  diagnostic_description.fbs.SOURCE  dtc_catalog.py
tools/odx-gen/tests/: test_cli_validate_dtc_catalog.py  test_cvc_pdx_has_f190_did.py  test_dbc_to_odx_toyota.py  test_dtc_catalog_schema.py  test_mdd_emit.py  test_no_hardcoded_data_leaks_through_parser.py  test_no_hardcoded_in_fault_lib.py  test_parser_dcm_cfg.py  test_parser_dcm_service_table.py  test_parser_dem_cfg.py  test_parser_ecu_cfg_header.py  test_roundtrip.py  test_third_party_catalog_interop.py
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs
(+484 files in other folders)
