# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 Taktflow Systems

[package]
name = "proxy-doip"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
proxy-core.workspace = true
thiserror.workspace = true
bytes.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
