# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 Taktflow Systems

[package]
name = "proxy-doip"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
proxy-core.workspace = true
async-trait.workspace = true
thiserror.workspace = true
bytes.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }

[lints]
workspace = true
