# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 Taktflow Systems

[package]
name = "proxy-main"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "opensovd-can-to-doip-proxy"
path = "src/main.rs"

[dependencies]
proxy-core.workspace = true
proxy-doip.workspace = true
proxy-can.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
figment.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
toml.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "signal"] }

# Linux-only test dep: the multi-frame vcan0 integration test needs a
# raw socketcan handle for the ECU-simulation thread. The non-Linux
# build skips the whole test module via `#![cfg(target_os = "linux")]`.
[target.'cfg(target_os = "linux")'.dev-dependencies]
socketcan.workspace = true

[lints]
workspace = true
